# GeekBrains_InformationSecurityBasics

./: .gitignore  README.md  pyproject.toml  Урок 10. Безопасная разработка приложений.md  Урок 12. Оценка и анализ защищённости.md  Урок 2. Введение в информационную безопасность.md  Урок 4. Моделирование угроз и выбор мер защиты.md  Урок 6. Основные технологии и инструменты обеспечения ИБ (некриптографические).md  Урок 8. Основы криптографической защиты информации.md
attachments/: TopTenTechniques.json  mitigations.ipynb  password_validator.py  unique_fstec_mitigations.csv  unique_ttt_mitigations.csv  Исходные данные и взаимосвязи.json  Перечень сформированных угроз.xlsx
